--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "babel --experimental -d lib/ src/",
-    "prepublish": "npm run compile"
+    "copyTemplates": "cp -r src/templates/ lib/templates/",
+    "prepublish": "npm run compile; npm run copyTemplates"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,10 @@
   "dependencies": {
     "bluebird": "^2.9.14",
     "commander": "^2.7.1",
-    "debug": "^2.1.3"
+    "debug": "^2.1.3",
+    "lodash": "^3.5.0",
+    "mkdirp": "^0.5.0",
+    "recursive-readdir": "^1.2.1"
   },
   "devDependencies": {
     "babel": "^4.7.16"
