--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "ES6+ web framework for perfectionists with deadlines",
   "main": "index.js",
   "scripts": {
-    "compile": "babel --experimental -d lib/ src/",
+    "compile": "babel -d lib/ src/",
     "copyTemplates": "cp -r src/templates/ lib/templates/",
-    "prepublish": "npm run compile; npm run copyTemplates"
+    "prepublish": "npm run compile; npm run copyTemplates",
+    "test": "mocha --compilers js:babel/register",
+    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -22,14 +24,17 @@
   },
   "homepage": "https://github.com/rjanko/rjanko",
   "dependencies": {
-    "bluebird": "^2.9.14",
+    "bluebird": "^2.9.24",
     "commander": "^2.7.1",
     "debug": "^2.1.3",
-    "lodash": "^3.5.0",
+    "lodash": "^3.6.0",
     "mkdirp": "^0.5.0",
     "recursive-readdir": "^1.2.1"
   },
   "devDependencies": {
-    "babel": "^4.7.16"
+    "babel": "^5.0.12",
+    "isparta": "^3.0.3",
+    "mocha": "^2.2.4",
+    "rimraf": "^2.3.2"
   }
 }
