--- a/src/templates/package.json
+++ b/src/templates/package.json
@@ -2,6 +2,7 @@
   "name": "<%= rjanko.name %>",
   "version": "0.0.1",
   "dependencies": {
-    "express": "~4.x"
+    "express": "~4.x",
+    "rjanko": "~<%= rjanko.version %>"
   }
 }
