--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "copyTemplates": "cp -r src/templates/ lib/templates/",
     "prepublish": "npm run compile; npm run copyTemplates",
     "test": "mocha --compilers js:babel/register",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha"
+    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha",
+    "sendToCoveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "posttest": "npm run coverage && npm run sendToCoveralls"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "babel": "^5.0.12",
+    "coveralls": "^2.11.2",
     "isparta": "^3.0.3",
     "mocha": "^2.2.4",
     "rimraf": "^2.3.2"
