--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "prepublish": "npm run compile; npm run copyTemplates",
     "test": "mocha --compilers js:babel/register",
     "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha",
-    "sendToCoveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "posttest": "npm run coverage && npm run sendToCoveralls"
+    "sendToCoveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
