--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "copyTemplates": "cp -r src/templates/ lib/templates/",
     "prepublish": "npm run compile; npm run copyTemplates",
     "test": "mocha --compilers js:babel/register",
+    "lint": "eslint src",
+    "posttest": "lint",
     "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha",
     "sendToCoveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
