--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepublish": "npm run compile; npm run copyTemplates",
     "test": "mocha --compilers js:babel/register",
     "lint": "eslint src",
-    "posttest": "lint",
+    "posttest": "npm run lint",
     "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover $npm_package_config_ISPARTA_OPTS ./node_modules/.bin/_mocha",
     "sendToCoveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
