--- a/templates/package.json
+++ b/templates/package.json
@@ -1,11 +1,48 @@
 {
   "name": "<%= rjanko.name %>",
   "version": "0.0.1",
+  "scripts": {
+    "dev": "DEBUG=rjanko:* babel-node -r --stage 0 src/server.js"
+  },
   "dependencies": {
     "babel": "^5.1.2",
+    "babel-core": "^5.1.10",
+    "babel-runtime": "^5.1.10",
     "express": "^4.12.3",
+    "flux-router-component": "^0.6.1",
+    "fontfaceobserver": "^1.4.5",
+    "immutable": "^3.7.2",
+    "jspath": "^0.3.1",
+    "moment": "^2.10.2",
+    "passport": "^0.2.1",
     "rjanko": "<%= rjanko.version %>",
+    "routr": "^0.1.0",
     "sequelize": "^2.0.5",
-    "sqlite3": "^3.0.5"
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
+    "sqlite3": "^3.0.5",
+    "transit-js": "^0.8.784"
+  },
+  "devDependencies": {
+    "autoprefixer-loader": "^1.2.0",
+    "axios": "^0.5.4",
+    "babel-loader": "^5.0.0",
+    "bluebird": "^2.9.24",
+    "classnames": "^1.2.0",
+    "component-css-loader": "^0.1.0",
+    "css-loader": "^0.10.1",
+    "extract-text-webpack-plugin": "^0.5.0",
+    "jeet": "^6.1.2",
+    "nib": "^1.1.0",
+    "nodemon": "^1.3.7",
+    "query-string": "^1.0.0",
+    "raf": "^2.0.4",
+    "react": "^0.13.2",
+    "react-hot-loader": "^1.2.5",
+    "style-loader": "^0.10.2",
+    "stylus": "^0.50.0",
+    "stylus-loader": "^1.1.0",
+    "webpack": "^1.8.5",
+    "webpack-dev-server": "^1.8.0"
   }
 }
