--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ node_js:
 after_success:
   - 'npm run coverage && npm run sendToCoveralls'
 
-before_script:
-  - sudo ./.travis-deps.sh
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install nginx
+  - sudo apt-get install forego
