--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ after_success:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install nginx
-  - wget -P /usr/local/bin https://godist.herokuapp.com/projects/ddollar/forego/releases/current/linux-amd64/forego && chmod u+x /usr/local/bin/forego
+  - sudo wget -P /usr/local/bin https://godist.herokuapp.com/projects/ddollar/forego/releases/current/linux-amd64/forego
+  - sudo chmod u+x /usr/local/bin/forego
