--- a/package.json
+++ b/package.json
@@ -26,22 +26,55 @@
   },
   "homepage": "https://github.com/kompot/rjanko",
   "dependencies": {
+    "axios": "^0.5.4",
     "babel": "^5.1.11",
+    "babel-core": "^5.1.11",
+    "babel-runtime": "^5.1.11",
     "bluebird": "^2.9.24",
+    "classnames": "^1.2.1",
     "commander": "^2.8.0",
     "debug": "^2.1.3",
+    "express": "^4.12.3",
+    "flux-router-component": "^0.6.1",
+    "fontfaceobserver": "^1.4.5",
+    "immutable": "^3.7.2",
+    "jspath": "^0.3.1",
     "lodash": "^3.7.0",
     "mkdirp": "^0.5.0",
-    "recursive-readdir": "^1.2.1"
-  },
-  "devDependencies": {
-    "axios": "^0.5.4",
+    "moment": "^2.10.2",
+    "passport": "^0.2.1",
+    "raf": "^2.0.4",
+    "recursive-readdir": "^1.2.1",
+    "routr": "^0.1.0",
+    "sequelize": "^2.0.6",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
+    "sqlite3": "^3.0.5",
+    "transit-js": "^0.8.784",
+    "webpack": "^1.8.8",
+    "webpack-dev-server": "^1.8.2",
     "babel-eslint": "^3.0.1",
     "coveralls": "^2.11.2",
     "eslint": "^0.19.0",
     "eslint-plugin-react": "^2.1.1",
     "isparta": "^3.0.3",
     "mocha": "^2.2.4",
-    "rimraf": "^2.3.2"
+    "rimraf": "^2.3.2",
+    "autoprefixer-loader": "^1.2.0",
+    "babel-loader": "^5.0.0",
+    "component-css-loader": "^0.1.0",
+    "css-loader": "^0.10.1",
+    "extract-text-webpack-plugin": "^0.5.0",
+    "jeet": "^6.1.2",
+    "nib": "^1.1.0",
+    "nodemon": "^1.3.7",
+    "react": "^0.13.2",
+    "react-hot-loader": "^1.2.5",
+    "style-loader": "^0.10.2",
+    "stylus": "^0.50.0",
+    "stylus-loader": "^1.1.0"
+  },
+  "peerDependencies": {
+    "babel": "^5.1.11"
   }
 }
