Some unusable docker experiments. Must concentrate on the core itself.

--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -1,8 +1,8 @@
 node:
   build: .
-  command: /code/node_modules/.bin/rjanko dev
+  command: /src/node_modules/.bin/rjanko dev
   ports:
    - "3000:3000"
    - "3001:3001"
   volumes:
-   - .:/code
+   - .:/src
