--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "eslint": "^0.20.0",
     "eslint-plugin-react": "^2.2.0",
     "express": "^4.12.3",
-    "extract-text-webpack-plugin": "^0.7.1",
     "flux-router-component": "^0.6.2",
     "fontfaceobserver": "^1.4.8",
     "immutable": "^3.7.2",
@@ -55,6 +54,7 @@
     "moment": "^2.10.2",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
+    "query-string": "^2.1.0",
     "raf": "^2.0.4",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
@@ -71,6 +71,6 @@
     "webpack-dev-server": "^1.8.2"
   },
   "peerDependencies": {
-    "babel": "^5.2.15"
+    "babel": "^5.2.17"
   }
 }
