--- a/templates/package.json
+++ b/templates/package.json
@@ -2,50 +2,7 @@
   "name": "test-project",
   "version": "0.0.1",
   "dependencies": {
-    "autoprefixer-loader": "^1.2.0",
-    "axios": "^0.5.4",
-    "babel": "^5.2.6",
-    "babel-core": "^5.2.6",
-    "babel-eslint": "^3.0.1",
-    "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.2.6",
-    "bluebird": "^2.9.25",
-    "classnames": "^2.1.1",
-    "commander": "^2.8.1",
-    "component-css-loader": "^0.1.0",
-    "coveralls": "^2.11.2",
-    "css-loader": "^0.12.0",
-    "debug": "^2.1.3",
-    "eslint": "^0.20.0",
-    "eslint-plugin-react": "^2.2.0",
-    "express": "^4.12.3",
-    "extract-text-webpack-plugin": "^0.7.0",
-    "flux-router-component": "^0.6.2",
-    "fontfaceobserver": "^1.4.7",
-    "immutable": "^3.7.2",
-    "isparta": "^3.0.3",
-    "jspath": "^0.3.1",
-    "lodash": "^3.8.0",
-    "mkdirp": "^0.5.0",
-    "mocha": "^2.2.4",
-    "moment": "^2.10.2",
-    "nodemon": "^1.3.7",
-    "passport": "^0.2.1",
-    "query-string": "^2.1.0",
-    "raf": "^2.0.4",
-    "react": "^0.13.2",
-    "react-hot-loader": "^1.2.6",
-    "recursive-readdir": "^1.2.1",
-    "rimraf": "^2.3.3",
-    "rjanko": "file:../",
-    "routr": "^0.1.1",
-    "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5",
-    "style-loader": "^0.12.1",
-    "stylus": "^0.51.1",
-    "stylus-loader": "^1.1.0",
-    "transit-js": "^0.8.795",
-    "webpack": "^1.8.10",
-    "webpack-dev-server": "^1.8.2"
+    "babel": "^5.2.17",
+    "rjanko": "file:../"
   }
 }
