--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,9 @@
 {
   "name": "test-project",
   "version": "0.0.1",
+  "scripts": {
+    "dev": "./node_modules/.bin/rjanko dev"
+  },
   "dependencies": {
     "babel": "^5.2.17",
     "rjanko": "file:../"
