--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mkdirp": "^0.5.0",
     "mocha": "^2.2.4",
     "moment": "^2.10.2",
+    "monkey-hot-loader": "0.0.3",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "query-string": "^2.1.0",
@@ -63,6 +64,7 @@
     "routr": "^0.1.1",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
+    "source-map-support": "^0.2.10",
     "style-loader": "^0.12.2",
     "stylus": "^0.51.1",
     "stylus-loader": "^1.1.0",
