--- a/templates/package.json
+++ b/templates/package.json
@@ -6,6 +6,9 @@
   },
   "dependencies": {
     "babel": "^5.2.17",
-    "rjanko": "file:../"
+    "babel-loader": "^5.0.0",
+    "express": "^4.12.3",
+    "rjanko": "file:../",
+    "webpack": "^1.8.11"
   }
 }
