--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "component-css-loader": "^0.1.0",
     "coveralls": "^2.11.2",
     "css-loader": "^0.12.0",
-    "debug": "^2.1.3",
+    "debug": "^2.2.0",
     "eslint": "^0.20.0",
     "eslint-plugin-react": "^2.2.0",
     "express": "^4.12.3",
@@ -53,6 +53,7 @@
     "mocha": "^2.2.4",
     "moment": "^2.10.2",
     "monkey-hot-loader": "0.0.3",
+    "node-libs-browser": "^0.5.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "query-string": "^2.1.0",
@@ -69,7 +70,7 @@
     "stylus": "^0.51.1",
     "stylus-loader": "^1.1.0",
     "transit-js": "^0.8.795",
-    "webpack": "^1.8.11",
+    "webpack": "^1.9.4",
     "webpack-dev-server": "^1.8.2"
   },
   "peerDependencies": {
