--- a/templates/package.json
+++ b/templates/package.json
@@ -5,9 +5,10 @@
     "dev": "./node_modules/.bin/rjanko dev"
   },
   "dependencies": {
-    "babel": "^5.3.1",
+    "babel": "^5.3.3",
     "babel-loader": "^5.0.0",
     "express": "^4.12.3",
+    "nodemon": "^1.3.7",
     "rjanko": "file:../",
     "webpack": "^1.9.5"
   }
