--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "commander": "^2.8.1",
     "component-css-loader": "^0.1.0",
     "coveralls": "^2.11.2",
-    "css-loader": "^0.12.0",
+    "css-loader": "^0.12.1",
     "debug": "^2.2.0",
     "eslint": "^0.21.0",
     "eslint-plugin-react": "^2.2.0",
@@ -47,6 +47,7 @@
     "fontfaceobserver": "^1.4.9",
     "immutable": "^3.7.2",
     "isparta": "^3.0.3",
+    "json-loader": "^0.5.1",
     "jspath": "^0.3.1",
     "lodash": "^3.8.0",
     "mkdirp": "^0.5.0",
