--- a/templates/package.json
+++ b/templates/package.json
@@ -8,6 +8,7 @@
     "babel": "^5.3.3",
     "babel-loader": "^5.0.0",
     "express": "^4.12.3",
+    "json-loader": "^0.5.1",
     "nodemon": "^1.3.7",
     "rjanko": "file:../",
     "webpack": "^1.9.5"
