Add prod mode. `forego start -f Procfile.dev` start development mode. `forego start -f Procfile.prod` starts production mode.

--- a/templates/package.json
+++ b/templates/package.json
@@ -2,7 +2,9 @@
   "name": "test-project",
   "version": "0.0.1",
   "scripts": {
-    "dev": "./node_modules/.bin/rjanko dev"
+    "dev":       "DEBUG=rjanko:* NODE_ENV=development ./node_modules/.bin/rjanko dev",
+    "prod":      "               NODE_ENV=production  ./node_modules/.bin/rjanko prod",
+    "prodDebug": "DEBUG=rjanko:* NODE_ENV=production  ./node_modules/.bin/rjanko prod"
   },
   "dependencies": {
     "babel": "^5.4.2",
