--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
     "babel-loader": "^5.1.0",
     "babel-runtime": "^5.4.2",
     "bluebird": "^2.9.25",
+    "body-parser": "^1.12.4",
     "classnames": "^2.1.1",
     "commander": "^2.8.1",
     "component-css-loader": "^0.1.0",
+    "cookie-parser": "^1.3.4",
     "coveralls": "^2.11.2",
     "css-loader": "^0.12.1",
     "debug": "^2.2.0",
     "eslint": "^0.21.1",
     "eslint-plugin-react": "^2.3.0",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "flux-router-component": "^0.6.3",
     "fontfaceobserver": "^1.4.9",
     "immutable": "^3.7.2",
@@ -57,6 +60,7 @@
     "node-libs-browser": "^0.5.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "query-string": "^2.1.0",
     "raf": "^2.0.4",
     "react": "^0.13.3",
