--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "axios": "^0.5.4",
     "babel": "^5.4.3",
     "babel-core": "^5.4.3",
-    "babel-eslint": "^3.1.4",
+    "babel-eslint": "^3.1.5",
     "babel-loader": "^5.1.2",
     "babel-runtime": "^5.4.3",
+    "baobab": "^1.1.0",
+    "baobab-react": "^0.1.1",
     "bluebird": "^2.9.25",
     "body-parser": "^1.12.4",
     "classnames": "^2.1.1",
@@ -42,9 +44,9 @@
     "coveralls": "^2.11.2",
     "css-loader": "^0.12.1",
     "debug": "^2.2.0",
-    "eslint": "^0.21.1",
+    "eslint": "^0.21.2",
     "eslint-plugin-react": "^2.3.0",
-    "express": "^4.12.3",
+    "express": "^4.12.4",
     "express-session": "^1.11.2",
     "flux-router-component": "^0.6.3",
     "fontfaceobserver": "^1.4.9",
@@ -75,7 +77,7 @@
     "stylus": "^0.51.1",
     "stylus-loader": "^1.1.1",
     "transit-js": "^0.8.795",
-    "webpack": "^1.9.6",
+    "webpack": "^1.9.7",
     "webpack-dev-server": "^1.8.2"
   },
   "peerDependencies": {
