--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.12.1",
     "debug": "^2.2.0",
     "eslint": "^0.21.2",
+    "eslint-config-airbnb": "0.0.2",
     "eslint-plugin-react": "^2.3.0",
     "express": "^4.12.4",
     "express-session": "^1.11.2",
