--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,10 @@
 {
   "parser": "babel-eslint",
   "extends": "eslint-config-airbnb",
-  "env": {
-    "browser": true,
-    "node": true
-  },
   "plugins": [
     "react"
   ],
-  "ecmaFeatures": {
-    "jsx": true
+  "rules": {
+    "spaced-line-comment": 0
   }
 }
