--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "axios": "^0.5.4",
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.8",
+    "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.3",
     "babel-runtime": "^5.4.7",
     "baobab": "^1.1.0",
     "baobab-react": "git+https://github.com/kompot/baobab-react.git",
-    "bluebird": "^2.9.25",
+    "bluebird": "^2.9.27",
     "body-parser": "^1.12.4",
-    "classnames": "^2.1.1",
+    "classnames": "^2.1.2",
     "commander": "^2.8.1",
     "component-css-loader": "^0.1.0",
     "cookie-parser": "^1.3.5",
@@ -46,38 +46,45 @@
     "debug": "^2.2.0",
     "eslint": "^0.21.2",
     "eslint-config-airbnb": "0.0.2",
-    "eslint-plugin-react": "^2.3.0",
+    "eslint-plugin-react": "^2.4.0",
     "express": "^4.12.4",
     "express-session": "^1.11.2",
+    "file-loader": "^0.8.4",
     "flux-router-component": "^0.6.3",
-    "fontfaceobserver": "^1.4.9",
     "isparta": "^3.0.3",
-    "json-loader": "^0.5.1",
+    "json-loader": "^0.5.2",
     "jspath": "^0.3.1",
-    "lodash": "^3.9.1",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "lodash": "^3.9.3",
     "mkdirp": "^0.5.0",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
-    "monkey-hot-loader": "0.0.3",
+    "mongoose": "^4.0.4",
     "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "query-string": "^2.1.0",
-    "raf": "^2.0.4",
+    "query-string": "^2.2.0",
     "react": "^0.13.3",
+    "react-formal": "^0.6.2",
+    "react-formal-inputs": "^1.0.0",
     "react-hot-loader": "^1.2.7",
+    "react-widgets": "^2.6.1",
     "recursive-readdir": "^1.2.1",
     "rimraf": "^2.3.4",
     "routr": "^0.1.2",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "source-map-support": "^0.2.10",
-    "style-loader": "^0.12.2",
+    "style-loader": "^0.12.3",
     "stylus": "^0.51.1",
-    "stylus-loader": "^1.1.1",
-    "webpack": "^1.9.8",
-    "webpack-dev-server": "^1.9.0"
+    "stylus-loader": "^1.2.0",
+    "svgo": "^0.5.2",
+    "svgo-loader": "^1.1.0",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0",
+    "yup": "^0.7.5"
   },
   "peerDependencies": {
     "babel": "^5.4.7"
