--- a/templates/package.json
+++ b/templates/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "DEBUG=rjanko:* NODE_ENV=development ./node_modules/.bin/rjanko dev",
-    "prod": "               NODE_ENV=production  ./node_modules/.bin/rjanko prod",
+    "prod": "               NODE_ENV=production ./node_modules/.bin/rjanko prod",
     "prodDebug": "DEBUG=rjanko:* NODE_ENV=production  ./node_modules/.bin/rjanko prod"
   },
   "dependencies": {
     "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "express": "^4.12.4",
     "json-loader": "^0.5.2",
+    "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
-    "rjanko": "file:../",
+    "rjanko": "0.0.3",
     "webpack": "^1.9.10"
   }
 }
