--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/kompot/rjanko",
   "dependencies": {
-    "autoprefixer-loader": "^1.2.0",
+    "autoprefixer-loader": "^2.0.0",
     "axios": "^0.5.4",
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
@@ -42,10 +42,10 @@
     "component-css-loader": "^0.1.0",
     "cookie-parser": "^1.3.5",
     "coveralls": "^2.11.2",
-    "css-loader": "^0.12.1",
+    "css-loader": "^0.14.4",
     "debug": "^2.2.0",
     "eslint": "^0.21.2",
-    "eslint-config-airbnb": "0.0.2",
+    "eslint-config-airbnb": "^0.0.6",
     "eslint-plugin-react": "^2.4.0",
     "express": "^4.12.4",
     "express-session": "^1.11.2",
@@ -76,7 +76,7 @@
     "routr": "^0.1.2",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
-    "source-map-support": "^0.2.10",
+    "source-map-support": "^0.3.1",
     "style-loader": "^0.12.3",
     "stylus": "^0.51.1",
     "stylus-loader": "^1.2.0",
@@ -84,7 +84,7 @@
     "svgo-loader": "^1.1.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0",
-    "yup": "^0.7.5"
+    "yup": "^0.8.2"
   },
   "peerDependencies": {
     "babel": "^5.4.7"
