--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.1.2",
     "commander": "^2.8.1",
     "component-css-loader": "^0.1.0",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "coveralls": "^2.11.2",
     "css-loader": "^0.14.4",
