--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rjanko",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "ES6+ web framework for perfectionists with deadlines",
   "main": "index.js",
   "scripts": {
-    "compile": "babel -d lib/ src/",
+    "compile": "rm -rf lib/; cp -r src/ lib/; babel -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "DEBUG=rjanko:* NODE_ENV=test mocha --compilers js:babel/register --timeout 600000",
     "lint": "eslint src",
