Return `lib`. Should make babel compile from src.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "rjanko",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "ES6+ web framework for perfectionists with deadlines",
   "main": "index.js",
   "scripts": {
+    "compile": "rm -rf lib/; cp -r src/ lib/; babel -d lib/ src/",
+    "prepublish": "npm run compile",
     "test": "DEBUG=rjanko:* NODE_ENV=test mocha --compilers js:babel/register --timeout 600000",
     "lint": "eslint src",
     "posttest": "npm run lint",
@@ -15,7 +17,7 @@
     "url": "https://github.com/kompot/rjanko.git"
   },
   "bin": {
-    "rjanko": "./src/rjanko.js"
+    "rjanko": "./lib/rjanko.js"
   },
   "author": "Anton Fedchenko <kompotik@gmail.com>",
   "license": "MIT",
