--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "mongoose": "^4.0.6",
+    "mustbe": "^0.3.1",
     "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
