--- a/package.json
+++ b/package.json
@@ -26,28 +26,28 @@
   "dependencies": {
     "autoprefixer-loader": "^2.0.0",
     "axios": "^0.5.4",
-    "babel": "^5.6.3",
-    "babel-core": "^5.6.3",
-    "babel-eslint": "^3.1.9",
-    "babel-loader": "^5.1.3",
-    "babel-runtime": "^5.6.3",
-    "baobab": "^1.1.0",
+    "babel": "^5.6.14",
+    "babel-core": "^5.6.15",
+    "babel-eslint": "^3.1.23",
+    "babel-loader": "^5.3.1",
+    "babel-runtime": "^5.6.15",
+    "baobab": "^1.1.1",
     "baobab-react": "git+https://github.com/kompot/baobab-react.git",
-    "bluebird": "^2.9.27",
-    "body-parser": "^1.12.4",
-    "classnames": "^2.1.2",
+    "bluebird": "^2.9.32",
+    "body-parser": "^1.13.2",
+    "classnames": "^2.1.3",
     "commander": "^2.8.1",
     "component-css-loader": "^0.1.0",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "coveralls": "^2.11.2",
-    "css-loader": "^0.14.4",
+    "css-loader": "^0.15.2",
     "debug": "^2.2.0",
-    "eslint": "^0.21.2",
-    "eslint-config-airbnb": "^0.0.6",
-    "eslint-plugin-react": "^2.4.0",
-    "express": "^4.13.0",
-    "express-session": "^1.11.2",
+    "eslint": "^0.24.0",
+    "eslint-config-airbnb": "0.0.6",
+    "eslint-plugin-react": "^2.6.4",
+    "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "file-loader": "^0.8.4",
     "flux-router-component": "^0.6.3",
     "isparta": "^3.0.3",
@@ -55,7 +55,7 @@
     "jspath": "^0.3.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
-    "lodash": "^3.9.3",
+    "lodash": "^3.10.0",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "mongoose": "^4.0.6",
@@ -64,23 +64,23 @@
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "query-string": "^2.2.0",
+    "query-string": "^2.3.0",
     "react": "^0.13.3",
-    "react-formal": "^0.6.2",
+    "react-formal": "^0.7.2",
     "react-formal-inputs": "^1.0.0",
     "react-hot-loader": "^1.2.7",
-    "react-widgets": "^2.6.1",
-    "rimraf": "^2.3.4",
-    "routr": "^0.1.2",
+    "react-widgets": "^2.7.2",
+    "rimraf": "^2.4.1",
+    "routr": "^0.1.3",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
-    "source-map-support": "^0.3.1",
+    "source-map-support": "^0.3.2",
     "style-loader": "^0.12.3",
     "svgo": "^0.5.3",
     "svgo-loader": "^1.1.0",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0",
-    "yup": "^0.8.2"
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1",
+    "yup": "^0.8.3"
   },
   "peerDependencies": {
     "babel": "^5.4.7"
