--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ indent_size = 2
 indent_style = space
 max_line_length = 80
 trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.md]
 max_line_length = 0
